--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!-- Шапка сайта -->
+    <!-- Шапка сайта-->
 
     <header class="header">
         <div class="container header__navigation">
@@ -52,7 +52,6 @@
             </ul>
         </div>
     </header>
-
     <main>
 
         <!-- Герой -->
@@ -65,7 +64,6 @@
         </section>
 
         <!--СофтСкилы компании-->
-
         <section class="softskills section">
             <h2 class="softskills__title-text visually-hidden">Преимущества в сотрудничестве</h2>
             <div class="container">
@@ -327,7 +325,7 @@
                 </ul>
             </div>
         </section>
-    <!-- Клиэнтс -->
+    <!-- Клиэнтс-->
         <section class="clients section">
             <div class="container">
                 <h2 class="clients__title">Постоянные клиенты</h2>
@@ -385,8 +383,7 @@
 
         </section>
     </main>
-    <!-- Футер -->
-
+    <!-- Футер-->
     <footer class="footer">
         <div class="container">
             <div class="footer__navigation">
@@ -499,7 +496,7 @@
                     </svg></span>
                 Соглашаюсь с рассылкой и принимаю<a class="checkbox-text-accent" href="">Условия договора</a></label>
         </div>
-        <button type="submit" class="modal-btn">Отправить</button>
+        <button type="submit" class="modal__btn">Отправить</button>
     </form>
 
 </div>
