--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,11 @@
 <header class="header">
     <div class="container header__navigation">
         <nav class="header__navigation">
-        <a class="logo link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"><span class="header__logo">Web</span>Studio</a>
+        <a class="logo link" href="https://irynakozhukh.github.io/goit-markup-hw-08/index.html"><span class="header__logo">Web</span>Studio</a>
         <ul class="header__list list">
-            <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html" class="header__link link">Студия</a></li>
-            <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html" class="header__link link current">Портфолио</a></li>
-            <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/" class="header__link link">Контакты</a></li>
+            <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/index.html" class="header__link link">Студия</a></li>
+            <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html" class="header__link link current">Портфолио</a></li>
+            <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/" class="header__link link">Контакты</a></li>
         </ul>
         </nav>
         <ul class="list header__list header__link-style">
@@ -61,9 +61,15 @@
             <ul class="list items">
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-1.jpg" alt="Ноутбук с изображениями трех портфолио" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/desktop/img1-1x.jpg 1x, ./images/desktop/img1-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img1-1x.jpg 1x, ./images/tab/img1-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img1-1x.jpg 1x, ./images/mob/img1-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-1.jpg" 
+                                    alt="Ноутбук с изображениями трех портфолио" />
+                                </picture>
                             <p class="portfolio__card-text">Технокряк это современная площадка распространения
                             коронавируса. Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -77,9 +83,14 @@
                 </li>
                 <li class="portfolio__item"> 
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-2.jpg" alt="Два баскетболиста в прыжке" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/desktop/img2-1x.jpg 1x, ./images/desktop/img1-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img2-1x.jpg 1x, ./images/tab/img2-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img2-1x.jpg 1x, ./images/mob/img2-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-2.jpg" alt="Два баскетболиста в прыжке" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A ab neque aperiam labore repellat corrupti iure nemo,
                                 distinctio quaerat, accusamus laudantium odit reiciendis delectus eum.</p>
                             </div>
@@ -92,9 +103,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-3.jpg" alt="Логотип ресторана Seafood" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/desktop/img3-1x.jpg 1x, ./images/desktop/img3-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img3-1x.jpg 1x, ./images/tab/img3-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img3-1x.jpg 1x, ./images/mob/img3-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-3.jpg" alt="Логотип ресторана Seafood" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt totam exercitationem molestias, eveniet sequi,
                                 laudantium velit qui impedit quisquam in? Ipsam, doloremque molestias! Blanditiis, ex accusamus.</p>
                             </div>
@@ -107,9 +123,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-4.jpg" alt="Черные наушники" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/desktop/img4-1x.jpg 1x, ./images/desktop/img4-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img4-1x.jpg 1x, ./images/tab/img4-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img4-1x.jpg 1x, ./images/mob/img4-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-4.jpg" alt="Черные наушники" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Corporis amet odio quidem asperiores voluptatem aliquam laudantium dolores omnis,
                                 excepturi sint ea nostrum repudiandae et reiciendis.</p>
@@ -123,9 +144,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-5.jpg" alt="Лежат две коробки белого и коричневого цвета с надписями и логотипами" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/desktop/img5-1x.jpg 1x, ./images/desktop/img5-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img5-1x.jpg 1x, ./images/tab/img5-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img5-1x.jpg 1x, ./images/mob/img5-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-5.jpg" alt="Лежат две коробки белого и коричневого цвета с надписями и логотипами" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Corporis amet odio quidem asperiores voluptatem aliquam laudantium dolores omnis,
                                 excepturi sint ea nostrum repudiandae et reiciendis accusamus id aperiam voluptate.</p>
@@ -139,9 +165,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-6.jpg" alt="Монитор с изображением веб-сайта" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/desktop/img6-1x.jpg 1x, ./images/desktop/img6-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img6-1x.jpg 1x, ./images/tab/img6-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img6-1x.jpg 1x, ./images/mob/img6-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-6.jpg" alt="Монитор с изображением веб-сайта" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sequi, impedit quaerat consectetur eum tenetur ea,
                                 et reiciendis voluptas deleniti eligendi inventore asperiores ratione ipsum.</p>
                             </div>
@@ -154,9 +185,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-7.jpg" alt="Раскрытый журнал с дизайном в голубо-бело-серых тонах" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/desktop/img7-1x.jpg 1x, ./images/desktop/img7-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img7-1x.jpg 1x, ./images/tab/img7-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img7-1x.jpg 1x, ./images/mob/img7-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-7.jpg" alt="Раскрытый журнал с дизайном в голубо-бело-серых тонах" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut perspiciatis ex fugit optio! Quis, quam! Inventore, nemo fuga! 
                                 Veritatis necessitatibus minus quo quibusdam esse voluptatibus.</p>
                             </div>
@@ -169,9 +205,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-8.jpg" alt="Бирка с надписью: LAB EL TAG" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/desktop/img8-1x.jpg 1x, ./images/desktop/img8-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img8-1x.jpg 1x, ./images/tab/img8-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img8-1x.jpg 1x, ./images/mob/img8-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-8.jpg" alt="Бирка с надписью: LAB EL TAG" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quae repudiandae, 
                                 minima reprehenderit eius autem iste quod amet rerum, officia, sed labore alias eligendi nemo!</p>
                             </div>
@@ -184,9 +225,14 @@
                 </li>
                 <li class="portfolio__item">
                     <div class="portfolio__card">
-                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html">
+                        <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html">
                             <div class="portfolio__cadr-overflow">
-                            <img class="images" src="./images/img-9.jpg" alt="Ноутбук с изображением веб-сайта Growing Business" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/desktop/img9-1x.jpg 1x, ./images/desktop/img9-2x.jpg 2x" media="(min-width:1200px)" />
+                                    <source srcset="./images/tab/img9-1x.jpg 1x, ./images/tab/img9-2x.jpg 2x" media="(min-width:768px)" />
+                                    <source srcset="./images/mob/img9-1x.jpg 1x, ./images/mob/img9-2x.jpg 2x" media="(min-width:320px)" />
+                                    <img class="images" src="./images/img-9.jpg" alt="Ноутбук с изображением веб-сайта Growing Business" />
+                                </picture>
                             <p class="portfolio__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                 Voluptate, architecto et voluptas odio voluptates doloribus optio illum facilis nam explicabo distinctio. 
                                 Quam nemo sapiente enim.</p>
