img-html-portfolio

--- a/index.html
+++ b/index.html
@@ -129,20 +129,25 @@
                 <h2 class="about__title">Чем мы занимаемся</h2>
                 <ul class="about__list list">
                     <li class="about__item">
-                        <img src="./images/box1.jpg" alt="разработчик пишет программу; на столе лежит проект, 
-            клавиатура, планшет, очки, тетрадь с карандашем, стоят два монитора." width="370" height="294">
+                        <picture>
+                            <source srcset="./images/desktop/img1x1.jpg 1x, ./images/desktop/img2x1.jpg 2x" media="(min-width:1200px)" />
+                            <img src="./images/box1.jpg" alt="разработчик пишет программу; на столе лежит проект, 
+                                        клавиатура, планшет, очки, тетрадь с карандашем, стоят два монитора." />
+                        </picture>
                         <p class="about__item-text">Десктопные приложения</p>
                     </li>
                     <li class="about__item">
-                        <img src="./images/box2.jpg"
-                            alt="Разработчик мобильных приложений держит в руке смартфон смотря на экран монитора."
-                            width="370" height="294">
+                        <picture>
+                            <source srcset="./images/desktop/img1x2.jpg 1x, ./images/desktop/img2x2.jpg 2x" media="(min-width:1200px)" />
+                            <img src="./images/box2.jpg" alt="Разработчик мобильных приложений держит в руке смартфон смотря на экран монитора." />
+                        </picture>
                         <p class="about__item-text">Мобильные приложения</p>
                     </li>
                     <li class="about__item">
-                        <img src="./images/box3.jpg"
-                            alt="Дизайнер держит в руке планшет, на котором изображена палитра цветов." width="370"
-                            height="294">
+                        <picture>
+                            <source srcset="./images/desktop/img1x3.jpg 1x, ./images/desktop/img2x3.jpg 2x" media="(min-width:1200px)" />
+                            <img src="./images/box3.jpg" alt="Дизайнер держит в руке планшет, на котором изображена палитра цветов." />
+                        </picture>
                         <p class="about__item-text">Дизайнерские решения</p>
                     </li>
                 </ul>
