--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
             <nav class="header__navigation">
                 <a class="logo link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"><span
                         class="header__logo">Web</span>Studio</a>
-                        <button class="btn__menu is-open" aria-expanded="false" js-open-menu>
-                            <svg  width="40" height="40" aria-label="Переключатель мобильного меню">
-                            <use class="icon-menu" href="./images/icons.svg#icon-menu_40px"></use>
-                            <use class="icon-close" href="./images/icons.svg#icon-close_40px"></use>
-                        </svg>
-                        </button>
+                        
                 <ul class="header__list list">
                     <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"
                             class="header__link link current">Студия</a></li>
@@ -56,6 +51,55 @@
                         </svg>+38 099 111 11 11</a>
                 </li>
             </ul>
+            <button class="header__menu-btn is-open">
+                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                    <use class="icon-menu" href="./images/icons.svg#icon-menu_40px"></use>
+                    
+                </svg>
+            </button>
+        </div>
+        <div class="header__menu">
+            <div class="container">
+                <div class="header__menu-top">
+            <button class="header__menu-btn">
+                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+            <use class="icon-close" href="./images/icons.svg#icon-close_40px"></use>
+            </svg>
+            </button>
+            <ul class="header__menu-list list">
+                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"
+                        class="header__menu-link link current">Студия</a></li>
+                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html"
+                        class="header__menu-link link">Портфолио</a></li>
+                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/"
+                        class="header__menu-link link">Контакты</a></li>
+            </ul>
+            </div>
+            <div class="header__menu-bottom">
+            <ul class="list header__menu-list header__menu-link-style">
+                <li class="header__menu-item">
+                    <a class="link header__menu-link contacts" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="header__menu-item">
+                    <a class="link header__menu-link contacts" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+            <ul class="list social__menu">
+                <li class="social__menu-item">
+                    <a href="" class="link link__social-menu">Instagram</a>
+                </li>
+                <li class="social__menu-item">
+                    <a href="" class="link link__social-menu">Twitter</a>
+                </li>
+                <li class="social__menu-item">
+                    <a href="" class="link link__social-menu">Facebook</a>
+                </li>
+                <li class="social__menu-item">
+                    <a href="" class="link link__social-menu">LinkedIn</a>
+                </li>
+            </ul>
+            </div>
+            </div>
         </div>
     </header>
     <main>
