--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                         </svg>+38 099 111 11 11</a>
                 </li>
             </ul>
-            <button class="header__menu-btn is-open">
+            <button class="header__btn-open is-open">
                 <svg width="40" height="40" aria-label="Переключатель мобильного меню">
                     <use class="icon-menu" href="./images/icons.svg#icon-menu_40px"></use>
                     
                 </svg>
             </button>
         </div>
-        <div class="header__menu">
+        <div class="header__menu is-hidden">
             <div class="container">
                 <div class="header__menu-top">
-            <button class="header__menu-btn">
+            <button class="header__btn-close">
                 <svg width="40" height="40" aria-label="Переключатель мобильного меню">
             <use class="icon-close" href="./images/icons.svg#icon-close_40px"></use>
             </svg>
@@ -593,7 +593,7 @@
 
 </div>
 </div>
-<script src="./js/mob-menu.js"></script>
+<script src="./js/menu.js"></script>
 <script src="./js/modal.js"></script>
 </body>
 
