--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </svg>+38 099 111 11 11</a>
                 </li>
             </ul>
-            <button class="header__btn-open is-open">
+            <button class="header__btn-open">
                 <svg width="40" height="40" aria-label="Переключатель мобильного меню">
                     <use class="icon-menu" href="./images/icons.svg#icon-menu_40px"></use>
                     
