--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <header class="header">
         <div class="container header__navigation">
             <nav class="header__navigation">
-                <a class="logo link" href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"><span
+                <a class="logo link" href="https://irynakozhukh.github.io/goit-markup-hw-08/index.html"><span
                         class="header__logo">Web</span>Studio</a>
                         
                 <ul class="header__list list">
-                    <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"
+                    <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/index.html"
                             class="header__link link current">Студия</a></li>
-                    <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html"
+                    <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html"
                             class="header__link link">Портфолио</a></li>
-                    <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/"
+                    <li class="header__item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/"
                             class="header__link link">Контакты</a></li>
                 </ul>
             </nav>
@@ -67,11 +67,11 @@
             </svg>
             </button>
             <ul class="header__menu-list list">
-                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/index.html"
+                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/index.html"
                         class="header__menu-link link current">Студия</a></li>
-                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/portfolio.html"
+                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/portfolio.html"
                         class="header__menu-link link">Портфолио</a></li>
-                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-07-2/"
+                <li class="header__menu-item"><a href="https://irynakozhukh.github.io/goit-markup-hw-08/"
                         class="header__menu-link link">Контакты</a></li>
             </ul>
             </div>
