--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             <div class="container">
                 <ul class="softskills__list list">
                     <li class="softskills__pre-title">
-                        <a href="" class="softskills__link">
+                        <div class="softskills__link">
                             <svg width="70" height="70">
                                 <use href="./images/icons.svg#icon-antenna">
                                 </use>
                             </svg>
-                        </a>
+                        </div>
                         <h3 class="softskills__title">Внимание к деталям</h3>
                         <p class="softskills__after-title">Идейные соображения, а также начало повседневной работы по
                             формированию позиции.</p>
