--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,14 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+
+<!-- Шапка сайта -->
+
     <header class="page-header">
       <div class="container">
-        <div class="menu__wrapper">
-          <a class="links logo logo--header" href="./index.html" lang="en">
-            <span class="logo--accent">Web</span>Studio
+        <div class="header__navigation">
+          <a class="link logo header__logo" href="./index.html" lang="en">
+            <span class="logo-accent">Web</span>Studio
           </a>
           <button
             class="button__menu-open js-open-menu"
@@ -40,31 +43,29 @@
               <use href="./images/icons.svg#menu_close_40px"></use>
             </svg>
           </button>
-          <div class="menu__wrapper">
+          <div class="header__navigation">
             <nav class="navigation">
-              <ul class="lists navigation__items">
+              <ul class="list navigation__items">
                 <li class="navigation__item">
-                  <a class="links link__navigation" href="./index.html"
-                    >Студия</a
-                  >
+                  <a class="link navigation__link" href="./index.html">Студия</a>
                 </li>
                 <li class="navigation__item">
                   <a
-                    class="links link__navigation is-current"
+                    class="link navigation__link is-current"
                     href="./portfolio.html"
                     >Портфолио</a
                   >
                 </li>
                 <li class="navigation__item">
-                  <a class="links link__navigation" href="">Контакты</a>
+                  <a class="link navigation__link" href="">Контакты</a>
                 </li>
               </ul>
             </nav>
 
-            <div class="contacts__thumb">
-              <ul class="lists contacts">
+            <div class="contact__link">
+              <ul class="list contacts">
                 <li class="contacts__item">
-                  <a class="links link__contacts" href="tel:+380961111111">
+                  <a class="link link__contacts" href="tel:+380961111111">
                     <svg class="smartphone">
                       <use href="./images/icons.svg#smartphone"></use>
                     </svg>
@@ -73,7 +74,7 @@
                 </li>
                 <li class="contacts__item">
                   <a
-                    class="links link__contacts mail"
+                    class="link link__contacts mail"
                     href="mailto:info@devstudio.com"
                   >
                     <svg class="envelope">
@@ -83,18 +84,18 @@
                   </a>
                 </li>
               </ul>
-              <ul class="lists social__menu">
+              <ul class="list social__menu">
                 <li class="social__menu-item">
-                  <a href="" class="links link__social-menu">Instagram</a>
+                  <a href="" class="link link__social-menu">Instagram</a>
                 </li>
                 <li class="social__menu-item">
-                  <a href="" class="links link__social-menu">Twitter</a>
+                  <a href="" class="link link__social-menu">Twitter</a>
                 </li>
                 <li class="social__menu-item">
-                  <a href="" class="links link__social-menu">Facebook</a>
+                  <a href="" class="link link__social-menu">Facebook</a>
                 </li>
                 <li class="social__menu-item">
-                  <a href="" class="links link__social-menu">LinkedIn</a>
+                  <a href="" class="link link__social-menu">LinkedIn</a>
                 </li>
               </ul>
             </div>
@@ -104,10 +105,13 @@
     </header>
 
     <main>
+
+      <!-- Мейн-Батн-->
+
       <section class="section">
         <div class="container">
           <h1 class="hidden">Наше портфолио</h1>
-          <ul class="lists filter">
+          <ul class="list filter">
             <li class="filter__item">
               <button class="button__filter is-active" type="button">
                 Все
@@ -127,9 +131,11 @@
             </li>
           </ul>
 
-          <ul class="lists portfolio">
+          <!-- Мейн-Портфолио-->
+
+          <ul class="list portfolio">
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -157,7 +163,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project1-d.jpg"
-                      alt="Ноутбук с изображением карточек людей на экране"
+                      alt="Ноутбук с изображениями трех портфолио"
                     />
                   </picture>
 
@@ -177,7 +183,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -205,7 +211,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project2-d.jpg"
-                      alt="Баскетболисты в прыжке, один с мячом, второй в защите"
+                      alt="Два баскетболиста в прыжке, с мячом и в защите"
                     />
                   </picture>
 
@@ -230,7 +236,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -258,7 +264,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project3-d.jpg"
-                      alt="На фоне рыбы надпись The seafood restaurant"
+                      alt="Логотип ресторана Seafood"
                     />
                   </picture>
 
@@ -280,7 +286,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -309,7 +315,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project4-d.jpg"
-                      alt="Наушники"
+                      alt="Черные наушники"
                     />
                   </picture>
 
@@ -331,7 +337,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -359,7 +365,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project5-d.jpg"
-                      alt="Коробки белая и картонного цвета с надписями сверху"
+                      alt="Лежат две коробки белого и коричневого цвета с надписями и логотипами"
                     />
                   </picture>
 
@@ -381,7 +387,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -409,7 +415,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project6-d.jpg"
-                      alt="Монитор"
+                      alt="Монитор с изображением веб-сайта"
                     />
                   </picture>
 
@@ -430,7 +436,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -458,7 +464,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project7-d.jpg"
-                      alt="Книга в развернутом виде"
+                      alt="Раскрытый журнал с дизайном в голубо-бело-серых тонах"
                     />
                   </picture>
 
@@ -480,7 +486,7 @@
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
@@ -508,7 +514,7 @@
                     <img
                       class="images"
                       src="./images/portfolio-project8-d.jpg"
-                      alt="Бирка с надписью: Lab El Tag"
+                      alt="Бирка с надписью: LAB EL TAG"
                     />
                   </picture>
 
@@ -521,47 +527,35 @@
                   </div>
                 </div>
                 <div class="portfolio-card__body">
-                  <h2 class="portfolio-card__title">
-                    Проект
-                    <span lang="en">LAB</span>
-                  </h2>
+                  <h2 class="portfolio-card__title"> Проект <span lang="en">LAB</span></h2>
                   <p class="portfolio-card__text">Маркетинг</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-card">
-              <a class="links link__portfolio" href="">
+              <a class="link link__portfolio" href="">
                 <div class="portfolio-card__aside">
                   <picture>
                     <source
                       srcset="
                         ./images/portfolio-project9-d.jpg    1x,
-                        ./images/portfolio-project9-d@2x.jpg 2x
-                      "
-                      media="(min-width: 1200px)"
-                    />
+                        ./images/portfolio-project9-d@2x.jpg 2x"
+                      media="(min-width: 1200px)" />
                     <source
                       srcset="
                         ./images/portfolio-project9-t.jpg    1x,
-                        ./images/portfolio-project9-t@2x.jpg 2x
-                      "
-                      media="(min-width: 768px)"
-                    />
+                        ./images/portfolio-project9-t@2x.jpg 2x"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/portfolio-project9-m.jpg    1x,
-                        ./images/portfolio-project9-m@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-
+                        ./images/portfolio-project9-m@2x.jpg 2x"
+                      media="(max-width: 767px)" />
                     <img
                       class="images"
                       src="./images/portfolio-project9-d.jpg"
-                      alt="Руки на открытом ноутбуке. Картинка на экране ноутбука с надписью: Growing Business"
-                    />
+                      alt="Ноутбук с изображением веб-сайта Growing Business" />
                   </picture>
-
                   <div class="overlay">
                     <p class="overlay__text">
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -571,9 +565,7 @@
                   </div>
                 </div>
                 <div class="portfolio-card__body">
-                  <h2 class="portfolio-card__title" lang="en">
-                    Growing Business
-                  </h2>
+                  <h2 class="portfolio-card__title" lang="en"> Growing Business </h2>
                   <p class="portfolio-card__text">Приложение</p>
                 </div>
               </a>
@@ -583,36 +575,28 @@
       </section>
     </main>
 
+<!-- Футер -->
+
     <footer class="footer">
       <div class="container">
         <div class="footer-tablet">
           <div class="footer__thumb">
-            <!-- Лого -->
-            <a class="links logo logo--footer" href="./index.html" lang="en">
-              <span class="logo--accent">Web</span>
-              Studio
-            </a>
-
-            <!-- адрес -->
+            <a class="link logo logo--footer" href="./index.html" lang="en">
+              <span class="logo-accent">Web</span>Studio</a>
             <address>
-              <a
-                class="links footer__address"
+              <a class="link footer__address"
                 href="https://goo.gl/maps/VM6gPYjPhEStrqMR6"
                 target="_blank"
-                rel="noopener, nofollow, noreferrer"
-              >
+                rel="noopener, nofollow, noreferrer">
                 г. Киев, пр-т Леси Украинки, 26
               </a>
-
-              <!-- Почта и телефон -->
-              <ul class="lists">
+              <ul class="list">
                 <li class="footer__item">
-                  <a class="links footer__link" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
+                  <a class="link footer__link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a>
                 </li>
                 <li class="footer__item">
-                  <a class="links footer__link" href="tel:+380961111111"
+                  <a class="link footer__link" href="tel:+380961111111"
                     >+38 096 111 11 11</a
                   >
                 </li>
@@ -621,7 +605,7 @@
           </div>
           <div class="footer__thumb footer__thumb--social">
             <strong class="footer__text">Присоединяйтесь</strong>
-            <ul class="lists social">
+            <ul class="list social">
               <li class="social__item">
                 <a class="link__social link__social--footer" href="">
                   <svg class="icon__social">
