--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
     <header class="page-header">
       <div class="container">
         <div class="header__navigation">
-          <a class="link logo header__logo" href="./index.html" lang="en">
-            <span class="logo-accent">Web</span>Studio
+          <a class="link logo logo--header" href="./index.html" lang="en">
+            <span class="logo--accent">Web</span>Studio
           </a>
           <button
             class="button__menu-open js-open-menu"
@@ -540,7 +540,7 @@
         <div class="footer-tablet">
           <div class="footer__thumb">
             <a class="link logo logo--footer" href="./index.html" lang="en">
-              <span class="logo-accent">Web</span>Studio</a>
+              <span class="logo--accent">Web</span>Studio</a>
             <address>
               <a class="link footer__address"
                 href="https://goo.gl/maps/VM6gPYjPhEStrqMR6"
